# Alkemy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  especificacion-synthdb.md  plan-ejecucion-mvp.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.jules/: bolt.md
docs/: adenda-campos-ia.md  cli.md  configuration.md  dsl.md  limitations.md
docs/adr/: 001-licencia.md  002-decision-llm-go-no-go.md  002-resultado-hito-0.md  003-ir-congelada.md  004-lecciones-esquema-real.md  005-prioridades-del-fusor.md  006-semillas-jerarquicas.md  007-autorreferencia-compuesta-multitenant.md  008-dimensiones-unique-compuesta.md  009-frontera-propuesta-artefacto-plan.md
docs/validaciones/: validacion-schema-inmobiliaria.md
experiments/00_llm_plan/: RESULTS.md  compute_metrics.py  contract.py  extract_ir.py  runner.py
experiments/00_llm_plan/ir/: cementerio.json  ciclos_deferrable.json  ciclos_nullable.json  ecommerce.json  inmobiliaria.json  opaco.json  rrhh_autoref_notnull.json  rrhh_autoref_nullable.json  taller.json
experiments/00_llm_plan/labels/: README.md  cementerio.yaml  ciclos_deferrable.yaml  ciclos_nullable.yaml  ciclos_unbreakable.yaml  ecommerce.yaml  inmobiliaria.yaml  opaco.yaml  rrhh_autoref_notnull.yaml  rrhh_autoref_nullable.yaml  taller.yaml
experiments/00_llm_plan/prompts/: v0.md
experiments/00_llm_plan/runs/: _summary.json  cementerio__llama3.1_8b__rep1.json  cementerio__llama3.1_8b__rep2.json  cementerio__llama3.1_8b__rep3.json  cementerio__qwen2.5_3b-instruct__rep1.json  cementerio__qwen2.5_3b-instruct__rep2.json  cementerio__qwen2.5_3b-instruct__rep3.json  cementerio__qwen2.5_7b-instruct__rep1.json  cementerio__qwen2.5_7b-instruct__rep2.json  cementerio__qwen2.5_7b-instruct__rep3.json  ciclos_deferrable__llama3.1_8b__rep1.json  ciclos_deferrable__llama3.1_8b__rep2.json  ciclos_deferrable__llama3.1_8b__rep3.json  ciclos_deferrable__qwen2.5_3b-instruct__rep1.json  ciclos_deferrable__qwen2.5_3b-instruct__rep2.json  ciclos_deferrable__qwen2.5_3b-instruct__rep3.json  (+75 more)
src/synthdb/: __init__.py  cli.py
tests/configs/: inmobiliaria_ejemplo.yaml
tests/integration/: test_numeric_postgres.py  test_seed_sql_postgres.py
tests/schemas/: cementerio.sql  ciclos_deferrable.sql  ciclos_nullable.sql  ciclos_unbreakable.sql  crm_real_minimo.sql  ecommerce.sql  fk_unique_target.sql  inmobiliaria.sql  multitenant_autoref.sql  multitenant_autoref_notnull.sql  opaco.sql  rrhh_autoref_notnull.sql  rrhh_autoref_nullable.sql  taller.sql
tests/unit/: test_smoke.py
(+89 files in other folders)
