[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthdb"
version = "0.1.0.dev0"
description = "Generador local-first de datos sintéticos semánticamente coherentes para bases de datos relacionales."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "SynthDB contributors" }]
keywords = ["synthetic-data", "database", "postgresql", "testing", "faker", "llm"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "sqlglot",
  "pydantic>=2",
  "typer",
  "rich",
  "faker",
  "networkx",
  "ruamel.yaml",
  "httpx",
]

[project.urls]
Homepage = "https://github.com/synthdb/synthdb"
Documentation = "https://github.com/synthdb/synthdb/blob/main/docs/architecture.md"
Issues = "https://github.com/synthdb/synthdb/issues"

[project.scripts]
synthdb = "synthdb.cli:app"

[project.optional-dependencies]
db = ["sqlalchemy>=2", "psycopg[binary]"]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "pre-commit",
  "testcontainers",
  "syrupy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synthdb"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "D",   # pydocstyle (Google convention, ver tool.ruff.lint.pydocstyle)
]
ignore = [
  "D100", "D104", "D107", # docstrings de módulo/paquete/__init__ opcionales
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# experiments/ es código de usar y tirar (§2 del plan de ejecución): se
# conservan los resultados, no el código, así que no lleva la misma
# disciplina de docstrings que src/.
"experiments/**" = ["D"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "llm: requiere un modelo servido (Ollama u OpenAI-compatible); excluido de CI estándar",
  "integration: requiere una base de datos real (testcontainers)",
]

[tool.coverage.run]
source = ["src/synthdb"]
